--- a/docs/(2021-06-13)打ち合わせ用資料.md
+++ b/docs/(2021-06-13)打ち合わせ用資料.md
@@ -97,3 +97,11 @@
 &nbsp;
 
 &nbsp;
+
+## 決まったこと
+
+- ファシリテータは @yuu-eguci
+- MTG は「2日に1回」と決めるのではなく、決まった目標が達成できたとき
+- 今回の目標は、
+    - @ayano サンが「ローカルで発生するエラーの解消」
+    - @yuuhi サンが「 Colaboratory の使い方把握」
