--- a/docs/(2021-06-13)打ち合わせ用資料.md
+++ b/docs/(2021-06-13)打ち合わせ用資料.md
@@ -105,3 +105,4 @@
 - 今回の目標は、
     - @ayano サンが「ローカルで発生するエラーの解消」
     - @yuuhi サンが「 Colaboratory の使い方把握」
+    - (@yuu-eguci) Colaboratory の使い方をきいて、プログラムを更新、共有するフローを作成
