--- a/docs/(2021-06-16)打ち合わせ用資料.md
+++ b/docs/(2021-06-16)打ち合わせ用資料.md
@@ -106,7 +106,7 @@ VGG16 をデフォのまま使う記事。
     - 各人の研究結果をかんたんに取得できる。
     - 各人の研究結果をおのおのかんたんに Colaboratory で実行できる。
     - 結果をシェアしやすく、一ヶ月終わるころにはつとめてまとめようとしなくても LT 資料ができているような状態にする。(一案あります -> Q and A)
-- @ayano: 17flowers みたいな
+- @ayano: 17flowers みたいな形式を、集めていただいたデータでつくる
 - @yuuhi: Colaboratory 上で、 fine_tuning まで実行していただく。手順は↓
 
 ***
@@ -125,7 +125,3 @@ VGG16 をデフォのまま使う記事。
 &nbsp;
 
 &nbsp;
-
-## 決まったことまとめ
-
-- foo
