--- a/setup_flower_stuff_lab.ipynb
+++ b/setup_flower_stuff_lab.ipynb
@@ -6,7 +6,7 @@
       "name": "setup_flower_stuff_lab.ipynb",
       "provenance": [],
       "mount_file_id": "1BYfJJhGc9LHkWGJPlTDmjjYk2m3h3pzq",
-      "authorship_tag": "ABX9TyONN0p1g0cxAfph7agEaf5D",
+      "authorship_tag": "ABX9TyPhGTkWPqWMkIMkiidKpvIN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,25 +32,71 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rhL0ll9h3noK"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rhL0ll9h3noK",
+        "outputId": "9878b92f-d0ed-421f-f974-6043952a294b"
       },
       "source": [
+        "# GPU のスペックを表示するコマンドです。\n",
         "!nvidia-smi"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Thu Jun 17 12:38:20 2021       \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| NVIDIA-SMI 465.27       Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
+            "|-------------------------------+----------------------+----------------------+\n",
+            "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+            "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
+            "|                               |                      |               MIG M. |\n",
+            "|===============================+======================+======================|\n",
+            "|   0  Tesla K80           Off  | 00000000:00:04.0 Off |                    0 |\n",
+            "| N/A   32C    P8    28W / 149W |      0MiB / 11441MiB |      0%      Default |\n",
+            "|                               |                      |                  N/A |\n",
+            "+-------------------------------+----------------------+----------------------+\n",
+            "                                                                               \n",
+            "+-----------------------------------------------------------------------------+\n",
+            "| Processes:                                                                  |\n",
+            "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
+            "|        ID   ID                                                   Usage      |\n",
+            "|=============================================================================|\n",
+            "|  No running processes found                                                 |\n",
+            "+-----------------------------------------------------------------------------+\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5eXFTcPFmx5S"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5eXFTcPFmx5S",
+        "outputId": "868c940a-7c13-4749-ddfb-ba5c9f99e9fe"
       },
       "source": [
+        "# Google Drive をマウントします。\n",
+        "# NOTE: 左のトコからポチポチマウントできますが、マウントすることを明示するほうが好みなので追加しています。\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
